minor fixes for var declares

--- a/p4f.html
+++ b/p4f.html
@@ -1,16 +1,18 @@
 <html>
 <title>(p4f.html) JsSid Player </title> 
- <header>
+ <head>
   <style type="text/css"> <!-- a {text-decoration:none; color:#C0C0C0;} a:hover {text-decoration:underline;} --></style>
 
 <!-- mike -->
-  <script type="text/javascript" src="source/SID-man3.js"></script>
-  <script type="text/javascript" src="source/mike1.js"></script>
-  <script type="text/javascript" src="source/mikePlayer.js"></script>
+  <script type="text/javascript" src="js/SID-man3.js"></script>
+  <script type="text/javascript" src="js/mike1.js"></script>
+  <script type="text/javascript" src="js/mikePlayer.js"></script>
  <!--  <script type="text/javascript" src="jsSID.js"></script> -->
 
-  
- </header>
+ <meta content="text/html;charset=utf-8" http-equiv="Content-Type">
+<meta content="utf-8" http-equiv="encoding">
+
+ </head>
  
  <body bgcolor="#000000" text="#CCCCCC" style="margin:20px;font-family:sans-serif;font-size:11pt">
  
