playlistui height changed to 150

--- a/t1.html
+++ b/t1.html
@@ -44,8 +44,12 @@
     oninput="SIDplayer.setvolume(Math.log(1-value)/-2.3);" onchange="SIDplayer.setvolume(Math.log(1-value)/-2.3);"> 
    </input> 
   </td></tr>
-  <tr><td bgcolor="#101010"> <ol id="playlistui" style="height:400px; overflow:hidden; overflow-y:scroll; list-style:normal; margin:2px; white-space:nowrap;">
-   <!--playlist is populated by javascript code-->
+
+  <tr>
+ <!-- mike changed height to 150 from 400 -->
+   <td bgcolor="#101010"> <ol id="playlistui" style="height:150px; overflow:hidden; overflow-y:scroll; list-style:normal; margin:2px; white-space:nowrap;">
+   
+<!--playlist is populated by javascript code-->
   </ol> </td></tr>
   <tr><td bgcolor="#203030"><table border="0" width="100%">
    <tr> 
